# bg-jam

./: .gitignore  README.md  docker-compose.yml  test.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_songs.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: export.py  songs.py
backend/app/services/: mini_comic.py
backend/tests/: conftest.py  test_chart_schema.py  test_export.py  test_mini_comic_layout.py  test_songs_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx  routerFuture.js  workflow.test.jsx
frontend/src/components/: Cell.jsx  Cell.test.jsx  PartGrid.jsx  PartGrid.test.jsx
frontend/src/pages/: SongEditorPage.jsx  SongEditorPage.test.jsx  SongLibraryPage.jsx  SongLibraryPage.test.jsx
